# Starnavi_test

./: .env.example  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 1b4dfc56188b_post_imporove.py  f49975f15829_initial_migration.py  f5140f0613d9_initial_migration.py
src/: base.py  config.py  db.py  main.py
src/auth/: authentication.py  models.py  routes.py  schemas.py  services.py
src/comments/: models.py  routes.py  schemas.py  services.py
src/core/: base.py  config.py  db.py
src/health/: routes.py
src/posts/: models.py  routes.py  schemas.py  services.py
src/utils/: moderation.py
tests/: test_auth.py  test_auth_service.py  test_comment_service.py  test_comments.py  test_post_service.py  test_posts.py
