[tool.poetry]
name = "testne"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
pydantic = {extras = ["email"], version = "^2.9.2"}
passlib = "^1.7.4"
pyjwt = "^2.9.0"
httpx = "^0.27.2"
python-jose = {extras = ["pycryptodome"], version = "^3.3.0"}
alembic = "^1.13.3"
python-multipart = "^0.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
